--- a/SimplePortal.Db.Ef/SimplePortal.Db.Ef.csproj
+++ b/SimplePortal.Db.Ef/SimplePortal.Db.Ef.csproj
@@ -49,7 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions.cs" />
     <Compile Include="IEfRepository.cs" />
+    <Compile Include="ISimplePortalEfDbContext.cs" />
     <Compile Include="RepositoryBase.cs" />
     <Compile Include="SimplePortalEfDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
